update: portfolio section

--- a/index.html
+++ b/index.html
@@ -58,66 +58,45 @@
         <!-- Portfolio Section -->
         <section class="ms_portfolio-section py-5">
             <div class="container mt-5">
-                <div class="ms_section-title d-flex justify-content-center">
+                <div class="ms_section-title text-center">
                     <h2>
                         PORTFOLIO
                     </h2>
                     <!-- Star symbol -->
+                    <hr>
+                    <span class="ms_star m-2"></i> <i class="fa-solid fa-star" style="color: #000000;"></i></span>
+                    <hr>
                 </div>
                 
                 <div class="row g-4">
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellendus possimus odit tempore ipsam maiores provident
-                    reprehenderit non veritatis facere consequuntur expedita
-                    excepturi inventore, quibusdam dolor? Excepturi esse eligendi
-                    tempore molestias.
+                    <div class="card ms_portfolio-card">
+                        <img src="img/cabin.png" class="rounded-3" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellendus possimus odit tempore ipsam maiores provident
-                    reprehenderit non veritatis facere consequuntur expedita
-                    excepturi inventore, quibusdam dolor? Excepturi esse eligendi
-                    tempore molestias.
+                    <div class="card ms_portfolio-card">
+                        <img src="img/cake.png" class="rounded-3" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellendus possimus odit tempore ipsam maiores provident
-                    reprehenderit non veritatis facere consequuntur expedita
-                    excepturi inventore, quibusdam dolor? Excepturi esse eligendi
-                    tempore molestias.
+                    <div class="card ms_portfolio-card">
+                        <img src="img/circus.png" class="rounded-3" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellendus possimus odit tempore ipsam maiores provident
-                    reprehenderit non veritatis facere consequuntur expedita
-                    excepturi inventore, quibusdam dolor? Excepturi esse eligendi
-                    tempore molestias.
+                    <div class="card ms_portfolio-card">
+                        <img src="img/game.png" class="rounded-3" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellendus possimus odit tempore ipsam maiores provident
-                    reprehenderit non veritatis facere consequuntur expedita
-                    excepturi inventore, quibusdam dolor? Excepturi esse eligendi
-                    tempore molestias.
+                    <div class="card ms_portfolio-card">
+                        <img src="img/safe.png" class="rounded-3" alt="">
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-4">
-                    <div class="card">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Repellendus possimus odit tempore ipsam maiores provident
-                    reprehenderit non veritatis facere consequuntur expedita
-                    excepturi inventore, quibusdam dolor? Excepturi esse eligendi
-                    tempore molestias.
+                    <div class="card ms_portfolio-card">
+                        <img src="img/safe.png" class="rounded-3" alt="">
                     </div>
                 </div>
                 </div>
