update: about section

--- a/index.html
+++ b/index.html
@@ -108,10 +108,13 @@
         <!-- About Section -->
         <section class="ms_primary_section ms_about-section py-5">
             <div class="container">
-                <div class="ms_section-title d-flex justify-content-center">
+                <div class="ms_section-title text-center">
                     <h2>
                         ABOUT
                     </h2>
+                    <hr>
+                    <span class="ms_star m-2"></i> <i class="fa-solid fa-star" style="color: #ffffff;"></i></span>
+                    <hr>
                     <!-- Star symbol -->
                 </div>
                 
@@ -142,8 +145,8 @@
                 </div>
                 <!-- /row -->
                 <!-- Download button --> 
-                <div class="d-flex justify-content-center pt-4">
-                    <button class="btn btn-sm btn-outline-light text-center">Download</button>
+                <div class="d-flex justify-content-center pt-5">
+                    <button class="btn btn-sm btn-outline-light text-center"><i class="fa-solid fa-arrow-right-to-bracket fa-rotate-90" style="color: #ffffff;"></i> Download</button>
                 </div>
             </div>
             <!-- /Container -->
