--- a/index.html
+++ b/index.html
@@ -205,10 +205,25 @@
         <!-- Footer-Top -->
         <div class="ms_footer-top py-5">
             <div class="container">
-                <div class="row g-4">
-                    <div class="col-12 col-md-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat vel quidem minima molestias </div>
-                    <div class="col-12 col-md-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat vel quidem minima molestias </div>
-                    <div class="col-12 col-md-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quaerat vel quidem minima molestias </div>
+                <div class="row g-4 text-center">
+                    <div class="col-12 col-md-4">
+                        <h4>LOCATION</h4>
+                        <p>2215 John Daniel Drive Clark, MO 54243</p>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <h4>AROUND THE WEB</h4>
+                        <ul class="d-flex justify-content-center">
+                            <li class="btn ms_btn" ><a href=""></a><i class=" fa-brands fa-facebook-f" style="color: #ffffff;"></i></li>
+                            <li class="btn ms_btn"><a href=""></a><i class="fa-brands fa-google-plus-g" style="color: #ffffff;"></i></li>
+                            <li class="btn ms_btn"><a href=""></a><i class="fa-brands fa-twitter" style="color: #ffffff;"></i></li>
+                            <li class="btn ms_btn"><a href=""></a><i class="fa-brands fa-linkedin-in" style="color: #ffffff;"></i></li> 
+                        </ul>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <h4>ABOUT FREELANCER</h4>
+                        <span>Freelance is a free to use, open source Bootstrap theme created by</span>
+                        <span class="ms_aqua-green">Start Bootstrap.</span>
+                    </div>
                 </div>
                 <!-- /row -->
             </div>
@@ -220,9 +235,7 @@
 
         <!-- Footer-Bottom -->
         <div class="ms_footer-bottom text-center py-4">
-            <p>
-                Copyright @your website              
-            </p>
+            <p>Copyright @ Your Website 2019</p>
         </div>
         <!-- /Footer-Bottom -->
     </footer>
@@ -232,34 +245,3 @@
 </body>
 </html>
 
-
-
-
-<!--   
-      <div>
-        <label for="email">Email</label>
-        <input class="form-control" type="email" id="email" />
-      </div>
-    
-   
-      <div>
-        <label for="username">Username</label>
-        <input
-          class="form-control ms_form-control"
-          type="text"
-          id="username"
-        />
-      </div>
-   
-    
-      <div class="form-floating mb-3">
-        <input
-          type="email"
-          class="form-control"
-          id="floatingInput"
-          placeholder="name@example.com"
-        />
-        <label for="floatingInput">Email address</label>
-      </div>
-  
-  </div> -->
