fix: hero section

--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@
 
     <main>
         <!-- Hero Section-->
-        <section class="ms_primary_section ms_hero-section py-5">
+        <section class="ms_primary_section ms_hero-section py-4">
             <div class="container">
                 <div class="ms_section-title">
                     <!-- Avatar -->
                     <img class="py-3" src="img/avatar.svg" alt="avatar picture">
-                    <h1 class="text-center pt-2">START BOOTSTRAP</h1>
+                    <h1 class="text-center">START BOOTSTRAP</h1>
                       <!-- Star Symbol -->
                     <hr>
                     <span class="ms_star m-2"></i> <i class="fa-solid fa-star" style="color: #ffffff;"></i></span>
                     <hr>
                     <!-- Description -->
-                    <p class="mt-5"> GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+                    <p class="mt-2"> GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
                 </div>
             </div>
         </section>
