fix: classes and debug

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         <nav class="navbar navbar-expand-md">
             <!-- Container -->
             <div class="container">
+                <!-- Brand -->
                 <a class="navbar-brand" href="#">START BOOTSTRAP</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <!-- Hamburger button -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span><i class="fa-solid fa-bars" style="color: #ffffff;"></i></span>
                 </button>
+                <!-- Nav links -->
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -86,6 +88,7 @@
                     <hr>
                 </div>
 
+                <!-- Portfolio-Images -->
                 <div class="row g-4">
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="card ms_portfolio-card">
@@ -141,22 +144,18 @@
                         <!-- Inner grid -->
                         <div class="row g-4">
                             <div class="col-12 col-md-6">
-                                <!-- <div class="card gx-5 gy-5"> -->
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Repellendus possimus odit tempore ipsam maiores provident
                                 reprehenderit non veritatis facere consequuntur expedita
                                 excepturi inventore, quibusdam dolor? Excepturi esse eligendi
                                 tempore molestias.
-                                <!-- </div> -->
                             </div>
                             <div class="col-12 col-md-6">
-                                <!-- <div class="card gx-5 gy-5"> -->
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                 Repellendus possimus odit tempore ipsam maiores provident
                                 reprehenderit non veritatis facere consequuntur expedita
                                 excepturi inventore, quibusdam dolor? Excepturi esse eligendi
                                 tempore molestias.
-                                <!-- </div> -->
                             </div>
                         </div>
                     </div>
@@ -188,20 +187,24 @@
                     <!-- Form -->
                     <div class="row justify-content-center">
                         <div class="col-8">
+                            <!-- Name -->
                             <div class="form-floating mb-3">
                                 <input type="text" class="form-control ms_form-control" id="name" placeholder="Name">
                                 <label for="name">Name</label>
                             </div>
+                            <!-- Email -->
                             <div class="form-floating mb-3">
                                 <input type="email" class="form-control ms_form-control" id="email"
                                     placeholder="Email Address">
                                 <label for="email">Email address</label>
                             </div>
+                            <!-- Phone number -->
                             <div class="form-floating mb-3">
                                 <input type="tel" class="form-control ms_form-control" id="phone"
                                     placeholder="Phone Number">
                                 <label for="phone">Phone Number</label>
                             </div>
+                            <!-- Message -->
                             <div class="form-floating mb-3">
                                 <textarea id="message" class="form-control ms_form-control" name="message"
                                     placeholder="Message"></textarea>
@@ -225,10 +228,12 @@
         <div class="ms_footer-top py-5">
             <div class="container">
                 <div class="row g-4 text-center">
+                    <!-- First Footer Column -->
                     <div class="col-12 col-md-4">
                         <h4>LOCATION</h4>
                         <p>2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
+                    <!-- Second Footer Column -->
                     <div class="col-12 col-md-4">
                         <h4>AROUND THE WEB</h4>
                         <ul class="d-flex justify-content-center">
@@ -242,6 +247,7 @@
                                     style="color: #ffffff;"></i></li>
                         </ul>
                     </div>
+                    <!-- Third Footer Column -->
                     <div class="col-12 col-md-4">
                         <h4>ABOUT FREELANCER</h4>
                         <span>Freelance is a free to use, open source Bootstrap theme created by</span>
